--- a/src/app/shared/modules/stat/stat.component.html
+++ b/src/app/shared/modules/stat/stat.component.html
@@ -12,8 +12,8 @@
     </div>
     <div class="card-footer">
         <span class="float-left">View Details {{data}}</span>
-        <a href="javascript:void(0)" class="float-right card-inverse">
-            <span ><i class="fa fa-arrow-circle-right"></i></span>
-        </a>
+        <button (click)="details()" class="float-right card-inverse">
+            <i class="fa fa-arrow-circle-right"></i>
+        </button>
     </div>
 </div>
