--- a/src/app/entities/entity-menu/entity-menu.component.html
+++ b/src/app/entities/entity-menu/entity-menu.component.html
@@ -4,7 +4,7 @@
         <app-stat [bgClass]="'success'" [icon]="'fa-puzzle-piece'" [count]="entityActiveCount" [label]="'Entities'" (viewDetails)="onViewDetails('entity')" ></app-stat>
     </div>
     <div class="col-xl-3 col-lg-6">
-        <app-stat [bgClass]="'success'" [icon]="'fa-tasks'" [count]="entityAccessActiveCount" [label]="'Entity Access'" ></app-stat>
+        <app-stat [bgClass]="'success'" [icon]="'fa-tasks'" [count]="entityAccessActiveCount" [label]="'Entity Access'" (viewDetails)="onViewDetails('entityAccess')"></app-stat>
     </div>
     <div class="col-xl-3 col-lg-6">
         <app-stat [bgClass]="'success'" [icon]="'fa-cubes'" [count]="124" [label]="'New Orders!'" ></app-stat>
