--- a/src/app/entities/entity-access-list/entity-access-list.component.html
+++ b/src/app/entities/entity-access-list/entity-access-list.component.html
@@ -1,4 +1,16 @@
 <app-page-header [heading]="'Access'" [icon]="'fa-tasks'" [inActiveBreadCrumb]="[{icon:'fa-wrench',link:'/settings',link_name:'Super Admin' }]"></app-page-header>
+<div class="row">
+  <div class="col-xl-12">                  
+      <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+              <button (click)="addEntityAccess()" class="float-right card-inverse">
+                  <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </button>
+          </li>
+      </ol>
+  </div>
+</div>
+
 <form>
     <div class="form-group form-inline">
         Full text search: <input class="form-control ml-2"  [formControl]="filter" type="text" />
