--- a/src/app/entities/entity-access-list/entity-access-list.component.html
+++ b/src/app/entities/entity-access-list/entity-access-list.component.html
@@ -10,32 +10,4 @@
       </ol>
   </div>
 </div>
-
-<form>
-    <div class="form-group form-inline">
-        Full text search: <input class="form-control ml-2"  [formControl]="filter" type="text" />
-    </div>
-</form>
-<div class="table-responsive">
-<table class="table table-striped">
-    <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Actions</th>
-      <th *ngFor="let item of this.columns('test')"  scope="col">{{item}}</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let entity of observableData | async; index as i">
-      <th scope="row">{{ i + 1 }}</th>
-      <td>
-          <button (click)="details(entity['_id'])" class="float-right card-inverse">
-              <i class="fa fa-arrow-circle-right"></i>
-          </button>
-        </td> 
-      <td *ngFor="let key of this.columns('test')">
-        <ngb-highlight [result]="entity[key]" [term]="filter.value"></ngb-highlight>
-      </td>
-    </tr>
-    </tbody>
-  </table></div>
+<app-data-table [entity_code]="'entityaccess'" [filters]="this.tableFilter" (actionEvent)="details($event)"></app-data-table>
