--- a/src/app/user-roles/role-list/role-list.component.html
+++ b/src/app/user-roles/role-list/role-list.component.html
@@ -1,4 +1,4 @@
-<app-page-header [heading]="'Entities'" [icon]="'fa-puzzle-piece'" [inActiveBreadCrumb]="[{icon:'fa-wrench',link:'/settings',link_name:'Super Admin' }]"></app-page-header>
+<app-page-header [heading]="this.service.getEntityLabel('role',true)" [icon]="'fa-puzzle-piece'" [inActiveBreadCrumb]="[{icon:'fa-wrench',link:'/settings',link_name:'Super Admin' }]"></app-page-header>
 <div class="row">
     <div class="col-xl-12">                  
         <ol class="breadcrumb">
@@ -11,4 +11,4 @@
     </div>
 </div>
 
-<app-data-table [entity_code]="'entity'" [filters]="this.tableFilter" (actionEvent)="details($event)" ></app-data-table>
+<app-data-table [entity_code]="'role'" [filters]="this.tableFilter" (actionEvent)="details($event)" ></app-data-table>
